cleanup, fix new sonar issues, and revert toList