@@ -15,6 +15,7 @@ import javax.sql.DataSource;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 
 @Slf4j
@@ -77,7 +78,7 @@ public class CoverageV3ServiceImpl implements CoverageV3Service {
         final List<CoverageSummary> beneficiarySummaries = enrollmentByBeneficiary.entrySet().stream()
                 .limit(page.getPageSize())
                 .map(membershipEntry -> CoverageServiceRepository.summarizeCoverageMembership(contract, membershipEntry))
-                .toList();
+                .collect(Collectors.toList()); //NOSONAR
 
         // Get the patient to start from next time
         final Optional<Map.Entry<Long, List<CoverageMembership>>> nextCursor =
