@@ -9,6 +9,7 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.locks.Condition;
 import java.util.concurrent.locks.ReentrantLock;
+import java.util.stream.Collectors;
 
 /**
  * A custom implementation of {@link BlockingQueue} made to fit the needs of AB2D. Because we have
@@ -223,7 +224,7 @@ public class RoundRobinBlockingQueue<E> implements BlockingQueue<E> {
     public int size() {
         lock.lock();
         try {
-            return categoryQueues.values().stream().map(queue -> queue.size())
+            return categoryQueues.values().stream().map(Deque::size)
                     .reduce(0, Integer::sum);
         } finally {
             lock.unlock();
@@ -297,10 +298,10 @@ public class RoundRobinBlockingQueue<E> implements BlockingQueue<E> {
                 currentIndex.set(0);
             }
             String currentContract =
-                    categoryQueues.keySet().stream().toList().get(currentIndex.get());
+                    categoryQueues.keySet().stream().collect(Collectors.toList()).get(currentIndex.get()); //NOSONAR
             Deque<E> queue = categoryQueues.get(currentContract);
             E val = queue.poll();
-            if (queue.size() == 0) {
+            if (queue.isEmpty()) {
                 // No more requests so remove category. We don't have to increment index since we removed the item at the
                 // current index
                 categoryQueues.remove(currentContract);
@@ -323,7 +324,7 @@ public class RoundRobinBlockingQueue<E> implements BlockingQueue<E> {
                 currentIndex.set(0);
             }
             String currentContract =
-                    categoryQueues.keySet().stream().toList().get(currentIndex.get());
+                    categoryQueues.keySet().stream().collect(Collectors.toList()).get(currentIndex.get()); //NOSONAR
             return categoryQueues.get(currentContract).peek();
         } finally {
             lock.unlock();
